# BigDecimal

./: CMakeLists.txt  README.md  env.sh
include/: BigDecimal.hpp
src/: BigDecimal.cpp
src/examples/: demo.cpp
